=head1 NAME

Changes - Revision history for DashProfiler

=head1 RELEASES

=head2 DashProfiler 1.02 - Jun 21 2007

  First full release (1.01 was incomplete)

=cut