@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DashProfiler
-version:      1.02
+version:      1.03
 version_from: lib/DashProfiler.pm
 installdirs:  site
 requires:
