@@ -1,9 +1,10 @@
 #!perl
 
-if (!require Test::Perl::Critic) {
-    Test::More::plan(
-        skip_all => "Test::Perl::Critic required for testing PBP compliance"
-    );
-}
+use Test::More;
+
+plan skip_all => "developer-only tests" unless -d ".svn";
+
+plan skip_all => "Test::Perl::Critic required"
+    unless eval { require Test::Perl::Critic };
 
 Test::Perl::Critic::all_critic_ok();
